--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
 <body>
     <div class="container1">
-        <h3>Header Logo</h3>
+        <div class="header">
+        <h3 class="a_header">Header Logo</h3>
         <ul>
             <li>header link one</li>
             <li>header link two</li>
             <li>header link three</li>
         </ul>
+    </div>
 
         <h2>This website is awesome</h2>
         <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
