--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             <li>header link three</li>
         </ul>
     </div>
-
+    <div class="info">
         <h2>This website is awesome</h2>
         <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
             constrast.</p>
         <button>Sign up</button>
+    </div>
     </div>
 
     <div class="container2">
