--- a/index.html
+++ b/index.html
@@ -10,43 +10,62 @@
 <body>
     <div class="container1">
         <div class="header">
-        <h3 class="a_header">Header Logo</h3>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
-    </div>
-    <div class="info">
-        <h2>This website is awesome</h2>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
-            constrast.</p>
-        <button>Sign up</button>
+            <h3 class="a_header">Header Logo</h3>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+        <div class="side_panel">
+        <div class="info">
+            <h2>This website is awesome</h2>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is
+                lower
+                constrast.</p>
+            <button>Sign up</button>      
+        </div>
+        <div class="placeholder">this is a placeholder for an image</div>
     </div>
     </div>
 
+    <h2 class="C2_header">Some random information</h2>
+
     <div class="container2">
-        <h2>Some random information</h2>
-        <p>this is some subtext under an illustration or image</p>
-        <p>this is some subtext under an illustration or image</p>
-        <p>this is some subtext under an illustration or image</p>
-        <p>this is some subtext under an illustration or image</p>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+    </div>
+    <div class="container2_text">
+        <p class="subtext">this is some subtext under an illustration or image</p>
+        <p class="subtext">this is some subtext under an illustration or image</p>
+        <p class="subtext">this is some subtext under an illustration or image</p>
+        <p class="subtext">this is some subtext under an illustration or image</p>
     </div>
 
     <div class="container3">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
-            peoople will actually read it. Who knows? All I know is that is looks nice.</p>
-        <p><strong>-Thor, God of Thunder</strong></p>
+        <p class="quote"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
+                space, or maybe
+                peoople will actually read it. Who knows? All I know is that is looks nice.</em></p>
+
+        <p style="font-size: 20px;"><strong>-Thor, God of Thunder</strong></p>
+
     </div>
 
     <div class="container4">
-        <p>Call to action! It's time!</p>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+        <div class="block">
+            <div class="call_header">
+                <p style="margin-bottom: 2px;">Call to action! It's time!</p>
+            
+            <p style="margin-top: 0px;">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button style="border-color: white; border-style: solid;">Sign up</button>
+        </div>
     </div>
 
     <div class="footer">
-        <p>Copyright - Travis du Plessis</p>
+        <p>Copyright &copy; Travis du Plessis</p>
     </div>
 </body>
 
